testsuite/poke.pkl/ass-diag-2.pk
/* { dg-do compile } */

10 = 20;  /* { dg-error "" } */
